# prosys

./: .gitignore  CHANGELOG.md  CLAUDE.md  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  vite.config.ts
.changeset/: add-macos-signing.md  add-task-reschedule-modal.md  add-update-notifications.md  api-error-handling.md  clear-wkwebview-http-cache.md  family-planner.md  fix-delete-sync.md  fix-esbuild-ci.md  fix-release-pipeline.md  fix-sortablejs-build.md  fix-task-reassignment-cache.md  fix-tauri-updater.md  fix-update-and-port.md  fix-update-restart-stale-server.md  footer-branding.md  footer-copyright.md  mobile-member-dropdown.md  persist-window-state.md  responsive-assign-picker.md  sign-native-binaries.md  store-to-controller-migration.md  task-cancellation.md  task-rescheduling.md  undo-delete-cancel.md
.claude/: settings.json
.githooks/: pre-commit
.learnings/: architecture.md  ci-cd-release-pipeline.md  gotchas.md  macos-code-signing.md  update-notifications.md
docs/: architecture.md  brief.md  progress.md
drizzle/: 0000_military_vindicator.sql  0001_careless_ben_grimm.sql  0002_flimsy_mantis.sql  0003_mysterious_lethal_legion.sql
e2e/: drag-and-drop.spec.ts  global-setup.ts  habit.spec.ts  helpers.ts  member.spec.ts  navigation.spec.ts  task.spec.ts
scripts/: prepare-server-bundle.js  sync-version.js
src/: app.css  app.d.ts  app.html  hooks.server.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs
(+188 files in other folders)
